--- a/index.html
+++ b/index.html
@@ -104,26 +104,19 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<br>
-					<strong>The Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a></strong>
+					<strong>The following is the Abstract from my thesis titled “Extracting Signal from the Noise of App Reviews” that has been submitted for examination.</a></strong>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					Apple Inc.'s App Store offers a distribution mechanism for apps and a public review system which allows users to express opinions regarding purchased apps. The ratings and reviews left by users have the potential to influence new users and, hence, have an impact on the commercial feasibility of an app. Current literature has extensively investigated reviews of books, movies and hotels. However, there is a limited understanding of reviews for mobile apps.
+					The App Store and Google Play are mobile app store fronts furnished with a public review system. The competition on these store fronts is intense- developers can push new releases to users directly; users can publicly express opinions on the apps they have used. The resulting transparent feedback loop, while evident to the app community, is visible to competitors as well. Studying these app reviews within a domain can inform the design of their own competing app, exploiting any prior user dissatisfaction. Thus, it behoves developers to maintain quality, in either attempts to enter this market with a new app or efforts in continuous refinement of existing app portfolio.
 					<br>
 					<br>
-					In this work, we analyse a large sample of reviews for top rated apps in order to determine the nature of the reviews, and how these reviews evolve over time. We performed a statistical analysis of over 8.7 million app reviews to identify the general distribution of review size, the rate of growth for reviews, and analyse the change of both rating and review size over time using the Gini coefficient. We found that:
+					Opinion mining research has yielded observations of interest to businesses by analysing user reviews of their products. These research efforts leverage static analysis techniques and natural language processing approaches to discern generalisable patterns and analyse content. However, a good framework to mine mobile app reviews for content useful to app developers is lacking. Our work addresses this gap.
 					<br>
 					<br>
-					<ol>
-						<li> most reviews are short and the majority of apps receive well under 50 reviews in their first year,</li>
-						<li> apps receive a higher number of short reviews in comparison to long reviews as they age,</li>
-						<li> around half of the apps decrease in user perceived quality over time, as reflected by the star ratings, and</li>
-						<li> the rate of review growth and profile of reviews changes significantly between various apps as well as categories.</li>
-					</ol>
-					<br>
-					Developers can use the data presented in this work to benchmark their app. Our approach offers insights for both newer and older apps as we analyse reviews over time. We recommend that developers regularly monitor early reviews and continuously refine their app in order to ensure they meet changing user expectations.
+					In this thesis we demonstrate that the majority of reviews when read in isolation, do not yield developers much actionable feedback. However, using a series of analytics, we can construct a frame of context to detect developer-useful information. More specifically, our work analyses 8.7 million reviews from 17,330 apps at a store-, category- and app-level perspective. We present a statistically constructed app review model that profiles review properties, growth and evolution. A text stabilisation treatment is also offered to prepare reviews for content analysis. Through use of the model to reduce the content search space, we offer a technique to detect and sort reviews by content usefulness. Holistic application of these analytics form an app development benchmarking framework to inform project expectations, priorities and scoping.
 				</div>
 			</div>
 		</div>
@@ -155,12 +148,10 @@
 					<br>
 					<ul class="item-details">
 						<li class="pub">
-							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">L. Hoon, M. A. Rodriguez-Garcia, R. Vasa, R. Valencia-Garcia, and J.-G. Schneider, “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
-						</li><li class="pub">
-							<a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="skill" target="_blank">Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015.</a>
+							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">Hoon, L., Rodriguez-García, M.A., Vasa, R., Valencia-García, R., & Schneider, J.-G. “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
 						</li>
 						<li class="pub">
-							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">Hoon, L., Rodriguez-García, M.A., Vasa, R., Valencia-García, R., & Schneider, J.-G. “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
+							<a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="skill" target="_blank">Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015.</a>
 						</li>
 						<li class="pub">
 							<a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="skill" target="_blank">Hoon, L., Mouzakis, K., Vasa, R., Tan, F.T.C., and Fitzgerald, M. “Examining the Role of IS Affordances in Enabling Time Critical Clinical Practices: An Information Processing Perspective,” 2014.</a>
@@ -264,7 +255,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-left">
 					<br>
-					<h4 style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Click here for my full resume</a></h4>
+					<h4 style="text-align:center;">View <a class="skill" href="./resume/lhoon-resume.pdf" download>my resume</a> or <a class="skill" href="./portfolio/lhoon-portfolio.pdf" download>my portfolio</a></h4>
 					<h4>Experience:</h4>
 					<dl class="dl-horizontal">
 						<dt>Aug '13 – Dec '15:</dt>
@@ -288,7 +279,7 @@
 					</dl>
 					<h4>Education:</h4>
 					<dl class="dl-horizontal">
-						<dt>(Expected in 2016):</dt>
+						<dt>(Submitted) 2016:</dt>
 						<dd>Doctor of Philosophy (Computer Science), Swinburne University of Technology, Australia.
 						</dd>
 						<dt>2010:</dt>
@@ -323,7 +314,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					<p>Thanks for dropping by. When I was young(er), I was all about changing the world. Now? I find myself doing R&amp;D with the <a href="http://www.ssil.com.au" class="about" target="_blank">SSI Lab.</a> Plus, I get to challenge and inspire others while teaching at <a href="http://www.swinburne.edu.au" class="about" target="_blank">Swinburne!</a> Music is my other passion. My free (and code debugging thinking) time is spent either rewiring my pedal board or playing bass and guitar. Don't ask how many pedals or instruments I have. Have a great day!</p>
+					<p>Thanks for dropping by. When I was young(er), I was all about changing the world. Now? I've just submitted my thesis and am looking for global opportunities to do just that. I've enjoyed my time teaching at <a href="http://www.swinburne.edu.au" class="about" target="_blank">Swinburne</a> and the pragmatic application of research with the <a href="https://www.deakin.edu.au/information-technology/research/deakin-software-and-technology-innovation-laboratory" class="about" target="_blank">Deakin Software and Technology Innovation Laboratory</a> (formerly NICTA Swinburne Digital Innovation Lab). I excitedly await bringing my experience in Data Analytics, Education, Human Computer Interaction and App Store Analysis to bear on new challenges in new places. My other passion is music. My free (and code debugging thinking) time is spent either rewiring my pedal board or playing bass and guitar. Don't ask how many pedals or instruments I have. Have a good one!</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
